src/test/ui/resolve/token-error-correct.stderr
error: incorrect close delimiter: `}`
  --> $DIR/token-error-correct.rs:19:1
   |
LL | fn main() {
   |           - close delimiter possibly meant for this
LL |     foo(bar(;
   |            - un-closed delimiter
...
LL | }
   | ^ incorrect close delimiter

error: expected expression, found `;`
  --> $DIR/token-error-correct.rs:14:13
   |
LL |     foo(bar(;
   |        -    ^
   |        |    |
   |        |    expected expression
   |        |    help: ...the missing `)` may belong here
   |        if you meant to close this...

error: expected one of `)`, `,`, `.`, `?`, or an operator, found `;`
  --> $DIR/token-error-correct.rs:14:13
   |
LL |     foo(bar(;
   |            -^
   |            ||
   |            |expected one of `)`, `,`, `.`, `?`, or an operator here
   |            |help: ...the missing `)` may belong here
   |            if you meant to close this...

error: expected expression, found `)`
  --> $DIR/token-error-correct.rs:19:1
   |
LL | }
   | ^ expected expression

error[E0425]: cannot find function `foo` in this scope
  --> $DIR/token-error-correct.rs:14:5
   |
LL |     foo(bar(;
   |     ^^^ not found in this scope

error[E0425]: cannot find function `bar` in this scope
  --> $DIR/token-error-correct.rs:14:9
   |
LL |     foo(bar(;
   |         ^^^ not found in this scope

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0425`.
